--- a/css/layout.css
+++ b/css/layout.css
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     text-decoration: none;
-    color: var(--primary-color);
+    gap: 1rem;
 }
 
 .logo img {
@@ -40,8 +40,10 @@
 }
 
 .logo-text {
+    font-family: 'Playfair Display', serif;
     font-size: 1.5rem;
-    font-weight: 700;
+    color: #333;
+    font-weight: 600;
 }
 
 .nav-content {
